# bienveillance-land

./: .gitignore  Cargo.toml
bienveillance-compliments-stub/: Cargo.toml
bienveillance-compliments-stub/src/: lib.rs
bienveillance-core/: Cargo.toml
bienveillance-core/src/: person.rs  smoothtalker.rs  welcomer.rs
bienveillance-core/tests/: welcoming_test.rs
bienveillance-web/: Cargo.toml
bienveillance-web/src/: dto.rs  main.rs
src/: lib.rs  person.rs  smoothtalker.rs  welcomer.rs
tests/: welcoming_test.rs
