[package]
name = "bienveillance-web"
version = "0.1.0"
authors = ["bachrc <8.bachrc@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bienveillance-core = { path = "../bienveillance-core" }
bienveillance-compliments-stub = { path = "../bienveillance-compliments-stub" }
actix-web = "3"
